<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.timodenk.gswnstupla.FeedbackActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivAppIcon"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/gswn_stupla_app"
            android:id="@+id/tvAppName"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/feedback_info"
        android:id="@+id/tvFeedbackSubtitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etFeedbackName"
        android:hint="@string/name"
        android:layout_below="@+id/tvFeedbackSubtitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!--<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etFeedbackEmailAddress"
        android:hint="@string/email_address"
        android:layout_below="@+id/etFeedbackName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etFeedbackMessage"
        android:hint="@string/your_message"
        android:lines="6"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1"
        android:gravity="top" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/btnFeedbackSend"
        android:layout_below="@+id/etFeedbackMessage"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:onClick="submitButtonClicked" />

</LinearLayout>
